@@ -1,6 +1,10 @@
 2010-11-13  Torbjorn Granlund  <tege@gmplib.org>
 
-	* config.guess (x86): Make test C snippet compatible with C++.
+	* acinclude.m4 (GMP_ASM_RODATA): Make test code snippet C++ compatible.
+	(GMP_C_DOUBLE_FORMAT): Likewise.
+	(GMP_FUNC_VSNPRINTF): Likewise.
+	
+	* config.guess (x86): Make test C snippet C++ compatible.
 
 2010-11-12  Torbjorn Granlund  <tege@gmplib.org>
 
